# rkm

./: .gitignore  Cargo.toml  KMod.md  MAKEFILE_GUIDE.md  Makefile  README.md  build_module.sh  linker.ld
docs/: KMod.md
kapi/: Cargo.toml  README.md
kapi/src/: kstrtox.rs  lib.rs  param.rs  string.rs  string_helper.rs
kapi/src/mm/: util.rs
kbindings/: Cargo.toml
kbindings/src/: aarch64.rs  bindings.rs  lib.rs  riscv64.rs
kmacro/: Cargo.toml
kmacro/src/: lib.rs
kmod/: Cargo.toml
kmod-loader/: Cargo.toml
kmod-loader/examples/: loader.rs  parse_elf.rs
kmod-loader/src/: lib.rs  loader.rs  module.rs  param.rs  parser.rs
kmod-loader/src/arch/: mod.rs  riscv64.rs  x86_64.rs
kmod-loader/src/arch/aarch64/: insn.rs  mod.rs
kmod-loader/src/arch/loongarch64/: inst.rs  mod.rs
kmod/src/: lib.rs  module.rs  param.rs
modules/.cargo/: config.toml
modules/hello/: Cargo.toml
modules/hello/src/: lib.rs
