[package]
name = "kmacro-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kmacro-tools"
readme = "README.md"
description = "Some derived macros for defining module infomation and c functions and c data."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0.35"
syn = { version = "2.0", features = ["full"] }
