[package]
name = "kmod-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
goblin = { version = "0.10", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }
int-enum = "1.2.0"
bitflags = "2.10"
log = "0.4"
rustc-demangle = { version = "0.1.26", default-features = false }
kmod = { path = "../kmod" }
bitfield-struct = "0.12"


[features]
module-sections = []

[[example]]
name = "parse_elf"
path = "examples/parse_elf.rs"

[[example]]
name = "loader"
path = "examples/loader.rs"

[dev-dependencies]
env_logger = "0.11"
memmap2 = "0.9.9"
