[package]
name = "kmod-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kmod-loader"
readme = "README.md"
keywords = ["kernel", "linux", "lkm-loader", "lkm", "no-std"]
description = "Rust implementation of Linux kernel module loader for loadable kernel module development"

[dependencies]
goblin = { version = "0.10", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }
int-enum = "1.2.0"
bitflags = "2.10"
log = "0.4"
bitfield-struct = "0.13"
ax-errno = "0.6"
cfg-if = "1.0"
paste = "1.0"
kmod-tools.workspace = true
kapi = { workspace = true, features = ["kparameter"] }

[features]
default = ["module-sections"]
module-sections = []

[[example]]
name = "parse_elf"
path = "examples/parse_elf.rs"

[[example]]
name = "loader"
path = "examples/loader.rs"

[dev-dependencies]
env_logger = "0.11"
memmap2 = "0.9.9"
