[package]
name = "kmod-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kmod-tools"
readme = "README.md"
description = "Reexported tools for working with kmod macros"

[dependencies]
kmacro-tools.workspace = true
kbindings.workspace = true
